--- a/TextRPG/TextRPG.vcxproj.filters
+++ b/TextRPG/TextRPG.vcxproj.filters
@@ -100,7 +100,7 @@
       <Filter>소스 파일\Items</Filter>
     </ClCompile>
     <ClCompile Include="Monster.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>소스 파일\Character</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -159,7 +159,7 @@
       <Filter>헤더 파일\Items</Filter>
     </ClInclude>
     <ClInclude Include="Monster.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>헤더 파일\Character</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
