--- a/TextRPG/TextRPG.vcxproj.filters
+++ b/TextRPG/TextRPG.vcxproj.filters
@@ -19,9 +19,6 @@
     <Filter Include="소스 파일\Character">
       <UniqueIdentifier>{3b3d9099-fcf8-4734-bd3b-728d64b424ab}</UniqueIdentifier>
     </Filter>
-    <Filter Include="소스 파일\Items">
-      <UniqueIdentifier>{e69690b7-ade6-4507-b67b-678c31b6b2e2}</UniqueIdentifier>
-    </Filter>
     <Filter Include="소스 파일\Enity">
       <UniqueIdentifier>{3e6c3ca9-f985-4bbd-8044-754e35bbae3b}</UniqueIdentifier>
     </Filter>
@@ -31,9 +28,6 @@
     <Filter Include="헤더 파일\Manager">
       <UniqueIdentifier>{2e16bc63-7315-4683-9003-d1b3ff2c6748}</UniqueIdentifier>
     </Filter>
-    <Filter Include="헤더 파일\Items">
-      <UniqueIdentifier>{36a98cc3-36fe-45c7-bb92-5b1553e2b50a}</UniqueIdentifier>
-    </Filter>
     <Filter Include="헤더 파일\Entity">
       <UniqueIdentifier>{43b544dd-f7c6-4a64-aa5e-80d41c8709b6}</UniqueIdentifier>
     </Filter>
@@ -42,6 +36,12 @@
     </Filter>
     <Filter Include="헤더 파일\Map">
       <UniqueIdentifier>{de00309b-d681-4db6-8027-f0b560ef8ec1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="소스 파일\Popup">
+      <UniqueIdentifier>{e69690b7-ade6-4507-b67b-678c31b6b2e2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="헤더 파일\Popup">
+      <UniqueIdentifier>{36a98cc3-36fe-45c7-bb92-5b1553e2b50a}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -64,10 +64,7 @@
       <Filter>소스 파일\Map</Filter>
     </ClCompile>
     <ClCompile Include="Inventory.cpp">
-      <Filter>소스 파일\Items</Filter>
-    </ClCompile>
-    <ClCompile Include="Weapon.cpp">
-      <Filter>소스 파일\Items</Filter>
+      <Filter>소스 파일\Popup</Filter>
     </ClCompile>
     <ClCompile Include="Stat.cpp">
       <Filter>소스 파일\Enity</Filter>
@@ -93,14 +90,17 @@
     <ClCompile Include="FieldMap.cpp">
       <Filter>소스 파일\Map</Filter>
     </ClCompile>
-    <ClCompile Include="Armor.cpp">
-      <Filter>소스 파일\Items</Filter>
-    </ClCompile>
     <ClCompile Include="Monster.cpp">
       <Filter>소스 파일\Character</Filter>
     </ClCompile>
     <ClCompile Include="PlayerInfo.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>소스 파일\Popup</Filter>
+    </ClCompile>
+    <ClCompile Include="Armor.cpp">
+      <Filter>소스 파일\Enity</Filter>
+    </ClCompile>
+    <ClCompile Include="Weapon.cpp">
+      <Filter>소스 파일\Enity</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -123,18 +123,12 @@
       <Filter>헤더 파일\Manager</Filter>
     </ClInclude>
     <ClInclude Include="Inventory.h">
-      <Filter>헤더 파일\Items</Filter>
-    </ClInclude>
-    <ClInclude Include="Weapon.h">
-      <Filter>헤더 파일\Items</Filter>
+      <Filter>헤더 파일\Popup</Filter>
     </ClInclude>
     <ClInclude Include="Item.h">
       <Filter>헤더 파일\Entity</Filter>
     </ClInclude>
     <ClInclude Include="Stat.h">
-      <Filter>헤더 파일\Entity</Filter>
-    </ClInclude>
-    <ClInclude Include="Constants.h">
       <Filter>헤더 파일\Entity</Filter>
     </ClInclude>
     <ClInclude Include="EnforceMap.h">
@@ -155,14 +149,20 @@
     <ClInclude Include="FieldMap.h">
       <Filter>헤더 파일\Map</Filter>
     </ClInclude>
-    <ClInclude Include="Armor.h">
-      <Filter>헤더 파일\Items</Filter>
-    </ClInclude>
     <ClInclude Include="Monster.h">
       <Filter>헤더 파일\Character</Filter>
     </ClInclude>
-    <ClInclude Include="PlayerInfo.h">
+    <ClInclude Include="Constants.h">
       <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerInfo.h">
+      <Filter>헤더 파일\Popup</Filter>
+    </ClInclude>
+    <ClInclude Include="Armor.h">
+      <Filter>헤더 파일\Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="Weapon.h">
+      <Filter>헤더 파일\Entity</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
