--- a/TextRPG/TextRPG.vcxproj
+++ b/TextRPG/TextRPG.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Inventory.cpp" />
+    <ClCompile Include="Lobby.cpp" />
     <ClCompile Include="MapData.cpp" />
     <ClCompile Include="MapManager.cpp" />
     <ClCompile Include="Monster.cpp" />
@@ -154,6 +155,7 @@
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="Inventory.h" />
+    <ClInclude Include="Lobby.h" />
     <ClInclude Include="MapData.h" />
     <ClInclude Include="MapManager.h" />
     <ClInclude Include="Monster.h" />
