--- a/TextRPG/TextRPG.vcxproj.filters
+++ b/TextRPG/TextRPG.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="Weapon.cpp">
       <Filter>소스 파일\Enity</Filter>
     </ClCompile>
+    <ClCompile Include="Lobby.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Enums.h">
@@ -163,6 +166,9 @@
     </ClInclude>
     <ClInclude Include="Weapon.h">
       <Filter>헤더 파일\Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="Lobby.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
